@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR
skinparam classBackgroundColor LOGIC_COLOR

package Logic {
    class SetStatusCommand
    class SetStatusCommandParser
}

package Model {
    class Person
    class Status
    enum StatusValue <<enumeration>>
}

Person ..> "1" Status
Status *--> StatusValue

SetStatusCommandParser ..> SetStatusCommand : creates
SetStatusCommand ..> Person : updates
SetStatusCommand ..> Status : creates
@enduml
